<resources>
    <string name="app_name">ProTeam</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_equipos">EquiposActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>

    <string name="NavEquipos_Equipos">Equipos de trabajo</string>
    <string name="NavEquipos_Suscripcion">Suscripcion</string>
    <string name="NavEquipos_DatosPersonales">Datos personales</string>
    <string name="NavEquipos_Notificaciones">Notificaciones</string>
    <string name="NavEquipos_Configuracion">Configuracion</string>
    <string name="NavEquipos_CerrarSesion">Cerrar sesion</string>
    <string name="title_activity_registro">Registro</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_grupos">GruposActivity</string>

    <string name="title_Grupos">Grupos</string>
    <string name="title_Info">Info</string>
    <string name="title_Eventos">Eventos</string>
    <string name="title_Perfil">Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_grupo_trabajador">GrupoTrabajadorActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_grupo_supervisor">GrupoSupervisorActivity</string>
</resources>