<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navEquipos_itmEquipos"
            android:checkable="true"
            android:icon="@drawable/trabajo_en_equipo"
            android:title="@string/NavEquipos_Equipos" />
        <item
            android:id="@+id/navEquipos_itmSuscripcion"
            android:checkable="true"
            android:icon="@drawable/suscripcion"
            android:title="@string/NavEquipos_Notificaciones" />
        <item
            android:id="@+id/navEquipos_itmDatos"
            android:checkable="true"
            android:icon="@drawable/informacion_personal"
            android:title="@string/NavEquipos_DatosPersonales" />
        <item
            android:id="@+id/navEquipos_itmNotificaciones"
            android:checkable="true"
            android:icon="@drawable/campana"
            android:title="@string/NavEquipos_Notificaciones" />
        <item
            android:id="@+id/navEquipos_itmConfiguracion"
            android:checkable="true"
            android:icon="@drawable/configuraciones"
            android:title="@string/NavEquipos_Configuracion" />
    </group>
</menu>